aws/private-agent.tf
# Private agent instance deploy
resource "aws_instance" "agent" {
  # The connection block tells our provisioner how to
  # communicate with the resource (instance)
  connection {
    # The default username for our AMI
    user = "${module.aws-tested-oses.user}"
    bastion_host = "${aws_instance.bootstrap.public_ip}"
    # The connection will use the local SSH agent for authentication.
  }

  root_block_device {
    volume_size = "${var.aws_agent_instance_disk_size}"
  }

  count = "${var.num_of_private_agents}"
  instance_type = "${var.aws_agent_instance_type}"

  ebs_optimized = "true"

  tags {
   owner = "${coalesce(var.owner, data.external.whoami.result["owner"])}"
   expiration = "${var.expiration}"
   Name =  "${data.template_file.cluster-name.rendered}-pvtagt-${count.index + 1}"
   cluster = "${data.template_file.cluster-name.rendered}"
  }
  # Lookup the correct AMI based on the region
  # we specified
  ami = "${module.aws-tested-oses.aws_ami}"

  # The name of our SSH keypair we created above.
  key_name = "${var.key_name}"

  # Any internal access
  vpc_security_group_ids = ["${aws_security_group.any-access-internal.id}"]

  # We're going to launch into the same subnet as our ELB. In a production
  # environment it's more common to have a separate private subnet for
  # backend instances.
  subnet_id = "${aws_subnet.private.id}"

  # OS init script
  provisioner "file" {
    content = "${module.aws-tested-oses.os-setup}"
    destination = "/tmp/os-setup.sh"
  }

  # We run a remote provisioner on the instance after creating it.
  # In this case, we just install nginx and start it. By default,
  # this should be on port 80
  provisioner "remote-exec" {
    inline = [
      "${local.no_provision} sudo chmod +x /tmp/os-setup.sh",
      "${local.no_provision} sudo bash /tmp/os-setup.sh",
    ]
  }

  lifecycle {
    ignore_changes = ["tags.Name"]
  }
}

# Create DCOS Mesos Agent Scripts to execute
module "dcos-mesos-agent" {
  source               = "github.com/bernadinm/tf_dcos_core"
  bootstrap_private_ip = "${aws_instance.bootstrap.private_ip}"
  dcos_install_mode    = "${var.state}"
  dcos_version         = "${var.dcos_version}"
  role                 = "dcos-mesos-agent"
}

# Execute generated script on agent
resource "null_resource" "agent" {
  # Changes to any instance of the cluster requires re-provisioning
  triggers {
    cluster_instance_ids = "${null_resource.bootstrap.id}"
    current_ec2_instance_id = "${aws_instance.agent.*.id[count.index]}"
  }
  # Bootstrap script can run on any instance of the cluster
  # So we just choose the first in this case
  connection {
    host = "${element(aws_instance.agent.*.private_ip, count.index)}"
    user = "${module.aws-tested-oses.user}"
    bastion_host = "${aws_instance.bootstrap.public_ip}"
  }

  count = "${var.num_of_private_agents}"

  # Generate and upload Agent script to node
  provisioner "file" {
    content     = "${module.dcos-mesos-agent.script}"
    destination = "run.sh"
  }

  # Wait for bootstrap node to be ready
  provisioner "remote-exec" {
    inline = [
     "${local.no_provision} \"until curl --output /dev/null --silent --head --fail http://${aws_instance.bootstrap.private_ip}/dcos_install.sh ; do printf 'waiting for bootstrap node to serve...'; sleep 20; done\""
    ]
  }

  # Install Slave Node
  provisioner "remote-exec" {
    inline = [
      "${local.no_provision} sudo chmod +x run.sh",
      "${local.no_provision} sudo ./run.sh",
    ]
  }

  # Watch Private Agent Nodes Start
  provisioner "remote-exec" {
    inline = [
      "${local.no_provision} \"until curl --output /dev/null --silent --head --fail http://${element(aws_instance.agent.*.private_ip, count.index)}:5051/version ; do printf 'waiting for private agent to serve...'; sleep 10; done\""
    ]
  }
}

output "Private_Agent_Private_IP_Address" {
  value = ["${aws_instance.agent.*.private_ip}"]
}
